--- a/AskMe/templates/inc/nav_authorization.html
+++ b/AskMe/templates/inc/nav_authorization.html
@@ -1,7 +1,7 @@
-<div style="margin-right: 400px" class="mr-md-0 d-flex mt-md-1">
-    <div class="d-flex justify-content-start">
+<div class="mr-md-0 d-flex mt-md-2" style="margin-right: 400px; width: 182.54px">
+    <div class="d-flex justify-content-start mx-auto">
         <a href="/log_in/"><u>log in</u></a>
-        &nbsp;
+        &nbsp;&nbsp;&nbsp;
         <a href="/register/"><u>register</u></a>
     </div>
 </div>
