--- a/AskMe/templates/inc/base.html
+++ b/AskMe/templates/inc/base.html
@@ -10,8 +10,8 @@
 </head>
 <body class="d-flex flex-column h-100">
 	<header>
-		<nav class="navbar navbar-dark d-flex justify-content-between justify-content-md-around fixed-top bg-dark">
-			<a class="navbar-brand" href="/">AskMe</a>
+		<nav class="navbar navbar-dark d-flex justify-content-between justify-content-md-around fixed-top bg-dark" style="height: 83px">
+			<a class="navbar-brand" href="/add_ask/">AskMe</a>
 			<form class="d-flex mt-md-0">
 				<div class="flex-fill mr-2 my-2 my-md-0">
 					<input class="form-control" type="text" placeholder="&#128269;Search" aria-label="Search">
@@ -28,7 +28,7 @@
 			{% block heading %}
 			{% endblock heading %}
 			<div class="row">
-				<div class="col-8">
+				<div class="col-8" style="margin-bottom: 100px">
 					{% block content %}
 					{% endblock content %}
 				</div>
