--- a/AskMe/templates/log_in.html
+++ b/AskMe/templates/log_in.html
@@ -2,32 +2,38 @@
 {% load static %}
 
 {% block navbar %}
-    {% include 'inc/nav_authorization.html' %}
+{% include 'inc/nav_authorization.html' %}
 {% endblock navbar %}
 
 {% block heading %}
-    <div class="mr-4 h3 text-dark">Log in</div>
+<div class="mr-4 h3 text-dark">Log in</div>
 {% endblock heading %}
 
 {% block content %}
 <form>
-  <div class="form-group row mt-2">
-    <label for="inputTitle" class="col-sm-2 col-form-label">Title</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputTitle">
+    <div class="form-group row mt-2">
+        <label for="inputTitle" class="col-sm-2 col-form-label">Login</label>
+        <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputTitle">
+        </div>
     </div>
-  </div>
     <div class="form-group row">
-    <label for="inputTags" class="col-sm-2 col-form-label">Tags</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputTags">
+        <label for="inputTags" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputTags">
+        </div>
     </div>
-  </div>
-  <div class="form-group row">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-10">
-      <button type="submit" class="btn btn-dark">ASK!</button>
+    <div class="form-group row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-dark">Log in!</button>
+        </div>
     </div>
-  </div>
+    <div class="form-group row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+            <a href="/register/" class=""><u>create new account</u></a>
+        </div>
+    </div>
 </form>
 {% endblock content %}
