--- a/AskMe/templates/settings.html
+++ b/AskMe/templates/settings.html
@@ -2,21 +2,7 @@
 {% load static %}
 
 {% block navbar %}
-<div style="margin-right: 200px" class="mr-md-0 d-flex mt-md-2">
-	<div class="row mx-2">
-		<img src="{% static "img/avatar.jpg" %}" class="avatar-img rounded">
-	</div>
-	<div class="d-flex flex-column bd-highlight mb-2">
-		<div>
-			<a href="#" class="h5 text-light bg-dark">lil_ollegik</a>
-		</div>
-		<div class="d-flex justify-content-start">
-			<a href="/settings/"><u>settings</u></a>
-			&nbsp;
-			<a href="#"><u>log out</u></a>
-		</div>
-	</div>
-</div>
+{% include 'inc/nav_account.html' %}
 {% endblock navbar %}
 
 {% block heading %}
@@ -48,46 +34,19 @@
     </div>
     <div class="form-group row">
         <label for="inputTags" class="col-sm-2 col-form-label">Upload avatar</label>
-        <div class="col-sm-10 d-flex flex-column">
+        <div class="col-sm-5">
             <img src="{% static "img/avatar.jpg" %}" alt="..." class="img-settings img-thumbnail">
-            <div class="row mt-3">
-                <span class="border border-dark py-2 px-2 mx-3" id="inputTags">c:\avatar.jpg</span>
-                <button type="submit" class="btn btn-outline-dark rounded-left right-rounded">choose</button>
+            <div class="custom-file mt-2">
+                <input type="file" class="custom-file-input" id="validatedCustomFile" required>
+                <label class="custom-file-label" for="validatedCustomFile" data-browse="choose">c:\avatar.jpg</label>
             </div>
         </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-2"></div>
         <div class="col-sm-2">
-            <button type="submit" class="btn btn-outline-dark">ASK!</button>
+            <button type="submit" class="btn btn-outline-dark">Save</button>
         </div>
     </div>
 </form>
 {% endblock content %}
-
-{% block right %}
-<div class="d-flex flex-column ml-4">
-    <div class="p-2 mb-2">
-        <h3 class="text-dark">Popular Tags</h3>
-        <div class="d-flex flex-wrap h5">
-            <a class="my-1 mr-2 text-info" href="#">perl</a>
-            <a class="my-1 mr-2 text-danger" href="#">python</a>
-            <a class="my-1 mr-2 text-success" href="#">TechnoPark</a>
-            <a class="my-1 mr-2 text-muted" href="#">MySQL</a>
-            <a class="my-1 mr-2 text-dark" href="#">django</a>
-            <a class="my-1 mr-2 text-warning" href="#">Mail.Ru</a>
-            <a class="my-1 mr-2 " href="#">Google</a>
-            <a class="my-1 mr-2 text-dark" href="#">Firefox</a>
-        </div>
-    </div>
-    <div class="p-2">
-        <div class="list-group list-group-flush">
-            <h3 class="text-dark">Best Members</h3>
-            <a href="#" class="my-1"><u>Mr. Freeman</u></a>
-            <a href="#" class="my-1"><u>Dr. House</u></a>
-            <a href="#" class="my-1"><u>Bender</u></a>
-            <a href="#" class="my-1"><u>Queen Victoria</u></a>
-        </div>
-    </div>
-</div>
-{% endblock right %}
