--- a/AskMe/templates/inc/right.html
+++ b/AskMe/templates/inc/right.html
@@ -2,9 +2,9 @@
     <div class="p-2 mb-2">
         <h3 class="text-dark">Popular Tags</h3>
         <div class="d-flex flex-wrap h5">
-            <a class="my-1 mr-2 text-info" href="/list_ask_tag/">perl</a>
-            <a class="my-1 mr-2 text-danger" href="/list_ask_tag/">python</a>
-            <a class="my-1 mr-2 text-success" href="/list_ask_tag/">TechnoPark</a>
+            <a class="my-1 mr-2 text-info" href="#">perl</a>
+            <a class="my-1 mr-2 text-danger" href="{% url 'questions_by_tag' %}">python</a>
+            <a class="my-1 mr-2 text-success" href="#">TechnoPark</a>
             <a class="my-1 mr-2 text-muted" href="#">MySQL</a>
             <a class="my-1 mr-2 text-dark" href="#">django</a>
             <a class="my-1 mr-2 text-warning" href="#">Mail.Ru</a>
