--- a/AskMe/templates/signup.html
+++ b/AskMe/templates/signup.html
@@ -2,13 +2,11 @@
 {% load static %}
 
 {% block navbar %}
-    {% include 'inc/nav_authorization.html' %}
+    {% include 'inc/navbar.html' %}
 {% endblock navbar %}
 
 {% block heading %}
-<div class="row mt-5 mt-md-0">
-    <h3 class="mr-4 h3 text-dark">Registration</h3>
-</div>
+<h3>Registration</h3>
 {% endblock heading %}
 
 {% block content %}
