--- a/AskMe/templates/inc/base.html
+++ b/AskMe/templates/inc/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>AskMe Project</title>
@@ -8,27 +8,18 @@
 	<link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 	<link href="{% static "css/my.css" %}" rel="stylesheet">
 </head>
-<body class="d-flex flex-column h-100">
-	<header>
-		<nav class="navbar navbar-dark d-flex justify-content-between justify-content-md-around fixed-top bg-dark" style="height: 83px">
-			<a class="navbar-brand" href="/add_ask/">AskMe</a>
-			<form class="d-flex mt-md-0">
-				<div class="flex-fill mr-2 my-2 my-md-0">
-					<input class="form-control" type="text" placeholder="&#128269;Search" aria-label="Search">
-				</div>
-				<button class="flex-fill btn btn-outline-success my-2 my-md-0" type="submit">ASK!</button>
-			</form>
-			{% block navbar %}
-			{% endblock navbar %}
-		</nav>
-	</header>
+<body>
+	{% block navbar %}
+	{% endblock navbar %}
 
-	<main role="main" class="flex-shrink-0">
+	<main role="main">
 		<div class="container mt-5">
-			{% block heading %}
-			{% endblock heading %}
+			<div class="row mt-5 mt-md-0">
+				{% block heading %}
+				{% endblock heading %}
+			</div>
 			<div class="row">
-				<div class="col-8" style="margin-bottom: 100px">
+				<div class="col-8" style="margin-bottom: 60px">
 					{% block content %}
 					{% endblock content %}
 				</div>
