--- a/AskMe/templates/inc/pagination.html
+++ b/AskMe/templates/inc/pagination.html
@@ -1,19 +1,43 @@
 <nav aria-label="..." class="mt-4">
-	<ul class="pagination pagination-md">
-		<li class="mx-2 shadow disabled">
-			<a class="page-link border border-dark" href="#" tabindex="-1">1</a>
-		</li>
-		<li class="mx-2 shadow">
-			<a class="page-link border border-dark" href="#">2</a>
-		</li>
-		<li class="mx-2 shadow">
-			<a class="page-link border border-dark" href="#">3</a>
-		</li>
-		<li class="mx-2 shadow">
-			<a class="page-link border border-dark" href="#">...</a>
-		</li>
-		<li class="mx-2 shadow">
-			<a class="page-link border border-dark" href="#">53</a>
-		</li>
+	<ul class="pagination">
+		{% if content.has_previous %}
+			<li class="mx-2 shadow page-item">
+				<a class="page-link border border-dark rounded-0" href="?page={{ content.previous_page_number }}" aria-label="Previous">
+					<span aria-hidden="true">&laquo;</span>
+				</a>
+			</li>
+		{% else %}
+			<li class="mx-2 shadow page-item disabled">
+				<a class="page-link border border-dark rounded-0" href="#" aria-label="Previous">
+					<span aria-hidden="true">&laquo;</span>
+				</a>
+			</li>
+		{% endif %}
+
+		{% for num in content.paginator.page_range %}
+			{% if num == content.number %}
+				<li class="mx-2 shadow page-item active">
+					<span class="page-link rounded-0">{{ num }}</span>
+				</li>
+			{% elif num > content.number|add:'-2' and num < content.number|add:'2' or num == 3 and content.number == 1 or num == content.paginator.num_pages|add:'-2' and content.number == content.paginator.num_pages %}
+				<li class="mx-2 shadow page-item">
+					<a class="page-link border border-dark" href="?page={{ num }}">{{ num }}</a>
+				</li>
+			{% endif %}
+		{% endfor %}
+
+		{% if content.has_next %}
+			<li class="mx-2 shadow page-item">
+				<a class="page-link border border-dark rounded-0" href="?page={{ content.next_page_number }}" aria-label="Next">
+					<span aria-hidden="true">&raquo;</span>
+				</a>
+			</li>
+		{% else %}
+			<li class="mx-2 shadow page-item disabled">
+				<a class="page-link border border-dark rounded-0" href="#" aria-label="Next">
+					<span aria-hidden="true">&raquo;</span>
+				</a>
+			</li>
+		{% endif %}
 	</ul>
 </nav>
