--- a/AskMe/templates/hot_questions.html
+++ b/AskMe/templates/hot_questions.html
@@ -7,7 +7,7 @@
 
 {% block heading %}
 <a class="col-3 h3 text-dark" href="{% url 'hot_questions' %}">Hot Questions</a>
-<a class="my-auto" href="{% url 'new_questoins' %}"><u>New Questions</u></a>
+<a class="my-auto" href="{% url 'new_questions' %}"><u>New Questions</u></a>
 {% endblock heading %}
 
 {% block content %}
