--- a/AskMe/templates/inc/right.html
+++ b/AskMe/templates/inc/right.html
@@ -3,7 +3,8 @@
         <h3 class="text-dark">Popular Tags</h3>
         <div class="d-flex flex-wrap h5">
             <a class="my-1 mr-2 text-info" href="#">perl</a>
-            <a class="my-1 mr-2 text-danger" href="{% url 'questions_by_tag' %}">python</a>
+            <a class="my-1 mr-2 text-danger" href="/tag/python/">python</a>
+            <!--<a class="my-1 mr-2 text-danger" href="{% url 'questions_by_tag' %">python</a>-->
             <a class="my-1 mr-2 text-success" href="#">TechnoPark</a>
             <a class="my-1 mr-2 text-muted" href="#">MySQL</a>
             <a class="my-1 mr-2 text-dark" href="#">django</a>
