--- a/AskMe/templates/new_questions.html
+++ b/AskMe/templates/new_questions.html
@@ -6,7 +6,7 @@
 {% endblock navbar %}
 
 {% block heading %}
-<a class="col-3 h3 text-dark" href="{% url 'new_questoins' %}">New Questions</a>
+<a class="col-3 h3 text-dark" href="{% url 'new_questions' %}">New Questions</a>
 <a class="my-auto" href="{% url 'hot_questions' %}"><u>Hot Questions</u></a>
 {% endblock heading %}
 
