--- a/AskMe/templates/questions_by_tag.html
+++ b/AskMe/templates/questions_by_tag.html
@@ -7,7 +7,7 @@
 
 {% block heading %}
 <h3>Tag:&nbsp;&nbsp;</h3>
-<h3>python</h3>
+<h3>{{ tag }}</h3>
 {% endblock heading %}
 
 {% block content %}
