--- a/AskMe/templates/inc/one_question.html
+++ b/AskMe/templates/inc/one_question.html
@@ -1,10 +1,10 @@
 {% load static %}
 <div class="row media d-flex flex-wrap question-box">
 	<div class="d-flex px-1 mr-4 flex-column">
-		<img src="{% static question.img %}" class="question-img mb-2" alt="...">
+		<img src="{% static question.profile_id.avatar %}" class="question-img mb-2" alt="...">
 		<div class="btn-group" role="group" aria-label="">
 			<button type="button" class="btn btn-outline-dark">&#9757;</button>
-			<span class="btn btn-outline-dark">{{ question.like }}</span>
+			<span class="btn btn-outline-dark"></span>
 		</div>
 	</div>
 	<div class="media-body px-1">
@@ -12,14 +12,14 @@
 		<p>{{ question.text }}</p>
 		<div class="row">
 			<div class="col-auto">
-				<a href="#" class="stretched-link"><u>answer (3)</u></a>
+				<a href="{% url 'question' question.id %}" class="stretched-link"><u>answer (3)</u></a>
 			</div>
 			<div class="col">
 				<div class="d-flex flex-wrap">
 					<p class="mr-1">Tags:</p>
-					<a class="mr-1" href="#"><u>black-jack</u></a>
-					<a class="mr-1" href="#"><u>bender</u></a>
-					<a class="mr-1" href="#"><u>TechnoPark</u></a>
+					{% for tag in question.tags.all %}
+						<a class="mr-1" href="{% url 'questions_by_tag' tag %}"><u>{{ tag }}</u></a>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
