--- a/AskMe/templates/inc/answer.html
+++ b/AskMe/templates/inc/answer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="row media d-flex flex-wrap question-box">
 	<div class="d-flex px-1 mr-4 flex-column">
-		<img src="{% static answer.img %}" class="question-img mb-2" alt="...">
+		<img src="{% static answer.profile_id.avatar %}" class="question-img mb-2" alt="...">
 		<div class="btn-group" role="group" aria-label="">
 			<button type="button" class="btn btn-outline-dark">&#9757;</button>
 			<span class="btn btn-outline-dark">{{ answer.like }}</span>
