--- a/AskMe/templates/question.html
+++ b/AskMe/templates/question.html
@@ -7,10 +7,9 @@
 
 {% block content %}
 
-<!-- {% include 'inc/one_question.html' %} -->
 <div class="row media d-flex flex-wrap">
 	<div class="d-flex px-1 mr-4 flex-column">
-		<img src="{% static question.img %}" class="question-img mb-2" alt="...">
+		<img src="{% static question.profile_id.avatar %}" class="question-img mb-2" alt="...">
 		<div class="btn-group" role="group" aria-label="">
 			<button type="button" class="btn btn-outline-dark">&#9757;</button>
 			<span class="btn btn-outline-dark">{{ question.like }}</span>
@@ -23,9 +22,9 @@
 			<div class="col">
 				<div class="d-flex flex-wrap">
 					<p class="mr-1">Tags:</p>
-					<a class="mr-1" href="#"><u>black-jack</u></a>
-					<a class="mr-1" href="#"><u>bender</u></a>
-					<a class="mr-1" href="#"><u>TechnoPark</u></a>
+					{% for tag in question.tags.all %}
+						<a class="mr-1" href="{% url 'questions_by_tag' tag %}"><u>{{ tag }}</u></a>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
