--- a/AskMe/templates/create_ask.html
+++ b/AskMe/templates/create_ask.html
@@ -14,7 +14,7 @@
     <div class="form-group row mt-2">
         <label for="inputTitle" class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputTitle">
+            <input type="text" class="form-control" id="inputTitle">
         </div>
     </div>
     <div class="form-group row">
