--- a/AskMe/templates/inc/navbar.html
+++ b/AskMe/templates/inc/navbar.html
@@ -1,12 +1,12 @@
 {% load static %}
 <header>
     <nav class="navbar navbar-dark d-flex justify-content-between justify-content-md-around fixed-top bg-dark" style="height: 81.6px">
-        <a class="navbar-brand" href="{% url 'create_ask' %}">AskMe</a>
+        <a class="navbar-brand" href="{% url 'new_questions' %}">AskMe</a>
         <form class="d-flex mt-md-0">
             <div class="flex-fill mr-2 my-2 my-md-0">
                 <input class="form-control" type="text" placeholder="&#128269;Search" aria-label="Search">
             </div>
-            <button class="flex-fill btn btn-outline-success my-2 my-md-0" type="submit">ASK!</button>
+            <a class="flex-fill btn btn-outline-success my-2 my-md-0" type="submit" href="{% url 'create_ask' %}">ASK!</a>
         </form>
         {% block user %}
         <div class="mr-md-0 d-flex mt-md-2" style="margin-right: 400px; width: 182.54px">
