--- a/AskMe/templates/settings.html
+++ b/AskMe/templates/settings.html
@@ -15,7 +15,7 @@
     <div class="form-group row mt-2">
         <label for="inputLogin" class="col-sm-2 col-form-label">Login</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputLogin" placeholder="dr_pepper">
+            <input type="text" class="form-control" id="inputLogin" placeholder="dr_pepper">
         </div>
     </div>
     <div class="form-group row mt-2">
@@ -27,11 +27,11 @@
     <div class="form-group row">
         <label for="inputNickName" class="col-sm-2 col-form-label">NickName</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputNickName" placeholder="Dr. Pepper">
+            <input type="text" class="form-control" id="inputNickName" placeholder="Dr. Pepper">
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputTags" class="col-sm-2 col-form-label">Upload avatar</label>
+        <label for="" class="col-sm-2 col-form-label">Upload avatar</label>
         <div class="col-sm-5">
             <img src="{% static "img/ava4.png" %}" alt="..." class="img-settings img-thumbnail">
             <div class="custom-file mt-2">
