--- a/AskMe/templates/signup.html
+++ b/AskMe/templates/signup.html
@@ -14,7 +14,7 @@
     <div class="form-group row mt-2">
         <label for="inputLogin" class="col-sm-3 col-form-label">Login</label>
         <div class="col-sm-9">
-            <input type="email" class="form-control" id="inputLogin" placeholder="dr_pepper" required>
+            <input type="text" class="form-control" id="inputLogin" placeholder="dr_pepper" required>
         </div>
     </div>
     <div class="form-group row mt-2">
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputTags" class="col-sm-3 col-form-label">Upload avatar</label>
+        <label for="" class="col-sm-3 col-form-label">Upload avatar</label>
         <div class="col-sm-5">
             <div class="custom-file">
                 <input type="file" class="custom-file-input" id="validatedCustomFile" required>
