--- a/AskMe/templates/create_ask.html
+++ b/AskMe/templates/create_ask.html
@@ -1,38 +1,39 @@
 {% extends 'inc/base.html' %}
-{% load static %}
 
-{% block navbar %}
-    {% include 'inc/navbar.html' %}
-{% endblock navbar %}
+{% load bootstrap4 %}
+{% load static %}
 
 {% block heading %}
 <h3>New Question</h3>
 {% endblock heading %}
 
 {% block content %}
-<form>
+<form method="post" novalidate>
+    {% csrf_token %}
     <div class="form-group row mt-2">
-        <label for="inputTitle" class="col-sm-2 col-form-label">Title</label>
+        <label for="id_title" class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTitle">
+            <input type="text" class="form-control" id="id_title" name="title">
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputText" class="col-sm-2 col-form-label">Text</label>
+        <label for="id_text" class="col-sm-2 col-form-label">Text</label>
         <div class="col-sm-10">
-            <textarea class="form-control" id="inputText" rows="7"></textarea>
+            <textarea class="form-control" id="id_text" name="text" rows="7"></textarea>
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputTags" class="col-sm-2 col-form-label">Tags</label>
+        <label for="id_tags" class="col-sm-2 col-form-label">Tags</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTags">
+            <input type="text" class="form-control" id="id_tags" name="tags">
         </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
+            {% buttons %}
             <button type="submit" class="btn btn-dark">ASK!</button>
+            {% endbuttons %}
         </div>
     </div>
 </form>
