--- a/AskMe/templates/inc/navbar.html
+++ b/AskMe/templates/inc/navbar.html
@@ -8,7 +8,23 @@
             </div>
             <a class="flex-fill btn btn-outline-success my-2 my-md-0" type="submit" href="{% url 'create_ask' %}">ASK!</a>
         </form>
-        {% block user %}
+        {% if request.user.is_authenticated %}
+        <div class="mr-md-0 d-flex mt-md-2" style="margin-right: 200px">
+            <div class="row mx-2">
+                <img src="{% static request.user.profile.avatar %}" class="avatar-img rounded">
+            </div>
+            <div class="d-flex flex-column bd-highlight mb-2">
+                <div>
+                    <a href="#" class="h5 text-light bg-dark">{{ request.user.username }}</a>
+                </div>
+                <div class="d-flex justify-content-start">
+                    <a href="{% url 'settings' %}"><u>settings</u></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="{% url 'logout' %}"><u>log out</u></a>
+                </div>
+            </div>
+        </div>
+        {% else %}
         <div class="mr-md-0 d-flex mt-md-2" style="margin-right: 400px; width: 182.54px">
             <div class="d-flex justify-content-start mx-auto">
                 <a href="{% url 'login' %}"><u>log in</u></a>
@@ -16,6 +32,6 @@
                 <a href="{% url 'signup' %}"><u>register</u></a>
             </div>
         </div>
-        {% endblock user %}
+        {% endif %}
     </nav>
 </header>
