--- a/AskMe/templates/question.html
+++ b/AskMe/templates/question.html
@@ -1,10 +1,6 @@
 {% extends 'inc/base.html' %}
 {% load static %}
 
-{% block navbar %}
-	{% include 'inc/navbar.html' %}
-{% endblock navbar %}
-
 {% block content %}
 
 <div class="row media d-flex flex-wrap">
@@ -39,12 +35,15 @@
 {% include 'inc/pagination.html' %}
 
 <hr class="row mt-3" color="#343a40" style="height: .1px; border: none">
-<div class="" style="">
-    <div class="row mt-3">
-        <textarea class="form-control" id="inputText" rows="2" placeholder="Enter your answer here..."></textarea>
+<form method="post">
+    {% csrf_token %}
+	{% if request.user.is_authenticated %}
+	<div class="row mt-3">
+        <textarea id="id_text" name="text" class="form-control" rows="2" placeholder="Enter your answer here..."></textarea>
     </div>
+	{% endif %}
     <div class="row my-2">
         <button type="submit" class="btn btn-dark">Answer</button>
     </div>
-</div>
+</form>
 {% endblock content %}
