--- a/AskMe/templates/settings.html
+++ b/AskMe/templates/settings.html
@@ -1,10 +1,6 @@
 {% extends 'inc/base.html' %}
 {% load static %}
 
-{% block navbar %}
-    {% include 'inc/navbar_user.html' %}
-{% endblock navbar %}
-
 {% block heading %}
 <h3>Settings:&nbsp;&nbsp;</h3>
 <h3>Dr. Pepper</h3>
@@ -13,30 +9,30 @@
 {% block content %}
 <form>
     <div class="form-group row mt-2">
-        <label for="inputLogin" class="col-sm-2 col-form-label">Login</label>
+        <label for="id_login" class="col-sm-2 col-form-label">Login</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputLogin" placeholder="dr_pepper">
+            <input type="text" class="form-control" id="id_login" name="login" value="{{ request.user.username }}">
         </div>
     </div>
     <div class="form-group row mt-2">
-        <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+        <label for="id_email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail" placeholder="dr.pepper@mail.ru">
+            <input type="email" class="form-control" id="id_email" name="email" value="{{ request.user.email }}">
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputNickName" class="col-sm-2 col-form-label">NickName</label>
+        <label for="id_nickname" class="col-sm-2 col-form-label">NickName</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputNickName" placeholder="Dr. Pepper">
+            <input type="text" class="form-control" id="id_nickname" name="first_name" value="{{ request.user.first_name }}">
         </div>
     </div>
     <div class="form-group row">
-        <label for="" class="col-sm-2 col-form-label">Upload avatar</label>
+        <label for="id_avatar" class="col-sm-2 col-form-label">Upload avatar</label>
         <div class="col-sm-5">
-            <img src="{% static "img/ava4.png" %}" alt="..." class="img-settings img-thumbnail">
+            <img src="{% static request.user.profile.avatar %}" alt="..." class="img-settings img-thumbnail">
             <div class="custom-file mt-2">
-                <input type="file" class="custom-file-input" id="validatedCustomFile" required>
-                <label class="custom-file-label" for="validatedCustomFile" data-browse="choose">c:\avatar.jpg</label>
+                <input type="file" class="custom-file-input" id="validatedCustomFile" name="avatar" required>
+                <label class="custom-file-label" for="validatedCustomFile" data-browse="choose">{{ request.user.profile.avatar }}</label>
             </div>
         </div>
     </div>
