--- a/AskMe/templates/login.html
+++ b/AskMe/templates/login.html
@@ -8,18 +8,18 @@
 {% endblock heading %}
 
 {% block content %}
-<form method="post" action="/login/" enctype="">
+<form method="post">
     {% csrf_token %}
     <div class="form-group row mt-2">
         <label for="id_username" class="col-sm-2 col-form-label">Login</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="id_username" name="username" placeholder="login">
+            <input type="text" class="form-control" id="id_username" name="username">
         </div>
     </div>
     <div class="form-group row">
         <label for="id_password" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="id_password" name="password" placeholder="pass">
+            <input type="password" class="form-control" id="id_password" name="password">
         </div>
     </div>
     {% if request.GET.next %}
@@ -34,7 +34,7 @@
                 {% endbuttons %}
             </div>
             <div class="flex-row">
-                <a href="{% url 'signup' %}" class=""><u>create new account</u></a>
+                <a href="{% url 'signup' %}?next={{ request.get_full_path }}" class=""><u>create new account</u></a>
             </div>
         </div>
     </div>
