--- a/AskMe/templates/settings.html
+++ b/AskMe/templates/settings.html
@@ -3,42 +3,49 @@
 
 {% block heading %}
 <h3>Settings:&nbsp;&nbsp;</h3>
-<h3>Dr. Pepper</h3>
+<h3>{{ request.user.username }}</h3>
 {% endblock heading %}
 
 {% block content %}
-<form>
+<form method="post" novalidate>
+    {% csrf_token %}
     <div class="form-group row mt-2">
-        <label for="id_login" class="col-sm-2 col-form-label">Login</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="id_login" name="login" value="{{ request.user.username }}">
+        <label for="id_username" class="col-sm-3 col-form-label">Login</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="id_username" name="username" value="{{ request.user.username }}">
         </div>
     </div>
     <div class="form-group row mt-2">
-        <label for="id_email" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
+        <label for="id_email" class="col-sm-3 col-form-label">Email</label>
+        <div class="col-sm-9">
             <input type="email" class="form-control" id="id_email" name="email" value="{{ request.user.email }}">
         </div>
     </div>
     <div class="form-group row">
-        <label for="id_nickname" class="col-sm-2 col-form-label">NickName</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="id_nickname" name="first_name" value="{{ request.user.first_name }}">
+        <label for="id_password" class="col-sm-3 col-form-label">New password</label>
+        <div class="col-sm-9">
+            <input type="password" class="form-control" id="id_password" name="password">
         </div>
     </div>
     <div class="form-group row">
-        <label for="id_avatar" class="col-sm-2 col-form-label">Upload avatar</label>
+        <label for="id_password_check" class="col-sm-3 col-form-label">Repeat new password</label>
+        <div class="col-sm-9">
+            <input type="password" class="form-control" id="id_password_check" name="password_check">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="id_avatar" class="col-sm-3 col-form-label">Upload avatar</label>
         <div class="col-sm-5">
-            <img src="{% static request.user.profile.avatar %}" alt="..." class="img-settings img-thumbnail">
+            <img src="{% static request.user.profile.avatar %}" class="img-settings img-thumbnail">
             <div class="custom-file mt-2">
-                <input type="file" class="custom-file-input" id="validatedCustomFile" name="avatar" required>
-                <label class="custom-file-label" for="validatedCustomFile" data-browse="choose">{{ request.user.profile.avatar }}</label>
+                <input type="file" class="custom-file-input" id="id_avatar" name="avatar">
+                <label class="custom-file-label" for="id_avatar" data-browse="choose">{{ request.user.profile.avatar }}</label>
             </div>
         </div>
     </div>
     <div class="form-group row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-2">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-9">
             <button type="submit" class="btn btn-outline-dark">Save</button>
         </div>
     </div>
