--- a/AskMe/templates/inc/navbar.html
+++ b/AskMe/templates/inc/navbar.html
@@ -18,8 +18,7 @@
                     <a href="#" class="h5 text-light bg-dark">{{ request.user.username }}</a>
                 </div>
                 <div class="d-flex justify-content-start">
-                    <a href="{% url 'settings' %}"><u>settings</u></a>
-                    &nbsp;&nbsp;&nbsp;
+                    <a href="{% url 'settings' %}"><u>settings</u></a>&nbsp;&nbsp;&nbsp;
                     <a href="{% url 'logout' %}"><u>log out</u></a>
                 </div>
             </div>
@@ -27,9 +26,13 @@
         {% else %}
         <div class="mr-md-0 d-flex mt-md-2" style="margin-right: 400px; width: 182.54px">
             <div class="d-flex justify-content-start mx-auto">
-                <a href="{% url 'login' %}?next={{ request.get_full_path }}"><u>log in</u></a>
-                &nbsp;&nbsp;&nbsp;
-                <a href="{% url 'signup' %}?next={{ request.get_full_path }}"><u>register</u></a>
+                {% if request.path == '/login/' or request.path == '/signup/' %}
+                    <a href="{% url 'login' %}?next={{ request.GET.next }}"><u>log in</u></a>&nbsp;&nbsp;&nbsp;
+                    <a href="{% url 'signup' %}?next={{ request.GET.next }}"><u>register</u></a>
+                {% else %}
+                    <a href="{% url 'login' %}?next={{ request.get_full_path }}"><u>log in</u></a>&nbsp;&nbsp;&nbsp;
+                    <a href="{% url 'signup' %}?next={{ request.get_full_path }}"><u>register</u></a>
+                {% endif %}
             </div>
         </div>
         {% endif %}
