--- a/AskMe/templates/login.html
+++ b/AskMe/templates/login.html
@@ -1,38 +1,41 @@
 {% extends 'inc/base.html' %}
-{% load static %}
 
-{% block navbar %}
-    {% include 'inc/navbar.html' %}
-{% endblock navbar %}
+{% load bootstrap4 %}
+{% load static %}
 
 {% block heading %}
 <h3>Log in</h3>
 {% endblock heading %}
 
 {% block content %}
-<form>
+<form method="post">
+    {% csrf_token %}
     <div class="form-group row mt-2">
-        <label for="inputTitle" class="col-sm-2 col-form-label">Login</label>
+        <label for="id_username" class="col-sm-2 col-form-label">Login</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTitle">
+            <input type="text" class="form-control" id="id_username" name="username">
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputTags" class="col-sm-2 col-form-label">Password</label>
+        <label for="id_password" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputTags">
+            <input type="password" class="form-control" id="id_password" name="password">
         </div>
     </div>
-    <div class="form-group row">
+    {% if request.GET.next %}
+        <input type="hidden" name="next" value="{{ request.GET.next }}">
+    {% endif %}
+    <div class="row">
         <div class="col-sm-2"></div>
-        <div class="col-sm-10">
-            <button type="submit" class="btn btn-dark">Log in!</button>
-        </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-10">
-            <a href="{% url 'signup' %}" class=""><u>create new account</u></a>
+        <div class="col-sm-10 d-flex flex-column">
+            <div class="flex-row">
+                {% buttons %}
+                <button type="submit" class="btn btn-dark">Log in!</button>
+                {% endbuttons %}
+            </div>
+            <div class="flex-row">
+                <a href="{% url 'signup' %}?next={{ request.GET.next }}" class=""><u>create new account</u></a>
+            </div>
         </div>
     </div>
 </form>
