--- a/AskMe/templates/login.html
+++ b/AskMe/templates/login.html
@@ -1,6 +1,5 @@
 {% extends 'inc/base.html' %}
 
-{% load bootstrap4 %}
 {% load static %}
 
 {% block heading %}
@@ -29,11 +28,9 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-10 d-flex flex-column">
             <div class="flex-row">
-                {% buttons %}
                 <button type="submit" class="btn btn-dark">Log in!</button>
-                {% endbuttons %}
             </div>
-            <div class="flex-row">
+            <div class="flex-row mt-3">
                 <a href="{% url 'signup' %}?next={{ request.GET.next }}" class=""><u>create new account</u></a>
             </div>
         </div>
