--- a/AskMe/templates/create_ask.html
+++ b/AskMe/templates/create_ask.html
@@ -8,32 +8,25 @@
 {% endblock heading %}
 
 {% block content %}
-<form method="post" novalidate>
+<form method="post" class="needs-validation" novalidate>
     {% csrf_token %}
-    <div class="form-group row mt-2">
-        <label for="id_title" class="col-sm-2 col-form-label">Title</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="id_title" name="title">
+
+    {% for form_field in form %}
+        <div class="form-group needs-validation row mt-2">
+            <label class="col-sm-2 col-form-label">{{ form_field.label }}</label>
+            <div class="col-sm-10">
+                {{ form_field }}
+                <div class="invalid-feedback d-block">
+                    {{ form_field.errors }}
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="id_text" class="col-sm-2 col-form-label">Text</label>
-        <div class="col-sm-10">
-            <textarea class="form-control" id="id_text" name="text" rows="7"></textarea>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="id_tags" class="col-sm-2 col-form-label">Tags</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="id_tags" name="tags">
-        </div>
-    </div>
+    {% endfor %}
+
     <div class="form-group row">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
-            {% buttons %}
             <button type="submit" class="btn btn-dark">ASK!</button>
-            {% endbuttons %}
         </div>
     </div>
 </form>
