--- a/AskMe/templates/login.html
+++ b/AskMe/templates/login.html
@@ -1,6 +1,5 @@
 {% extends 'inc/base.html' %}
 
-{% load bootstrap4 %}
 {% load static %}
 
 {% block heading %}
@@ -10,18 +9,19 @@
 {% block content %}
 <form method="post">
     {% csrf_token %}
-    <div class="form-group row mt-2">
-        <label for="id_username" class="col-sm-2 col-form-label">Login</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="id_username" name="username">
+
+    {% for form_field in form %}
+        <div class="form-group row mt-2">
+            <label class="col-sm-2 col-form-label">{{ form_field.label }}</label>
+            <div class="col-sm-10">
+                {{ form_field }}
+                <div class="invalid-feedback d-block">
+                    {{ form_field.errors }}
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="id_password" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-            <input type="password" class="form-control" id="id_password" name="password">
-        </div>
-    </div>
+    {% endfor %}
+
     {% if request.GET.next %}
         <input type="hidden" name="next" value="{{ request.GET.next }}">
     {% endif %}
@@ -29,11 +29,9 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-10 d-flex flex-column">
             <div class="flex-row">
-                {% buttons %}
                 <button type="submit" class="btn btn-dark">Log in!</button>
-                {% endbuttons %}
             </div>
-            <div class="flex-row">
+            <div class="flex-row mt-2">
                 <a href="{% url 'signup' %}?next={{ request.GET.next }}" class=""><u>create new account</u></a>
             </div>
         </div>
