--- a/AskMe/templates/settings.html
+++ b/AskMe/templates/settings.html
@@ -9,28 +9,41 @@
 {% block content %}
 <form method="post" novalidate>
     {% csrf_token %}
+
     <div class="form-group row mt-2">
         <label for="id_username" class="col-sm-3 col-form-label">Login</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="id_username" name="username" value="{{ request.user.username }}">
+            <div class="invalid-feedback d-block">
+                {{ form.username.errors }}
+            </div>
         </div>
     </div>
     <div class="form-group row mt-2">
         <label for="id_email" class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
             <input type="email" class="form-control" id="id_email" name="email" value="{{ request.user.email }}">
+            <div class="invalid-feedback d-block">
+                {{ form.email.errors }}
+            </div>
         </div>
     </div>
     <div class="form-group row">
         <label for="id_password" class="col-sm-3 col-form-label">New password</label>
         <div class="col-sm-9">
             <input type="password" class="form-control" id="id_password" name="password">
+            <div class="invalid-feedback d-block">
+                {{ form.password.errors }}
+            </div>
         </div>
     </div>
     <div class="form-group row">
         <label for="id_password2" class="col-sm-3 col-form-label">Repeat new password</label>
         <div class="col-sm-9">
             <input type="password" class="form-control" id="id_password2" name="password2">
+            <div class="invalid-feedback d-block">
+                {{ form.password2.errors }}
+            </div>
         </div>
     </div>
     <div class="form-group row">
