--- a/AskMe/templates/signup.html
+++ b/AskMe/templates/signup.html
@@ -8,30 +8,21 @@
 {% block content %}
 <form method="post" novalidate>
     {% csrf_token %}
-    <div class="form-group row mt-2">
-        <label for="id_username" class="col-sm-3 col-form-label">Login</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="id_username" name="username" required>
-        </div>
-    </div>
-    <div class="form-group row mt-2">
-        <label for="id_email" class="col-sm-3 col-form-label">Email</label>
-        <div class="col-sm-9">
-            <input type="email" class="form-control" id="id_email" name="email" required>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="id_password" class="col-sm-3 col-form-label">Password</label>
-        <div class="col-sm-9">
-            <input type="password" class="form-control" id="id_password" name="password" required>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-sm-3 col-form-label">Repeat password</label>
-        <div class="col-sm-9">
-            <input type="password" class="form-control" id="id_password2" name="password2" required>
-        </div>
-    </div>
+
+    {% for form_field in form %}
+        {% if form_field != form.avatar %}
+            <div class="form-group row mt-2">
+                <label class="col-sm-3 col-form-label">{{ form_field.label }}</label>
+                <div class="col-sm-9">
+                    {{ form_field }}
+                    <div class="invalid-feedback d-block">
+                        {{ form_field.errors }}
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+    {% endfor %}
+
     <div class="form-group row">
         <label for="id_avatar" class="col-sm-3 col-form-label">Upload avatar</label>
         <div class="col-sm-5">
@@ -41,6 +32,7 @@
             </div>
         </div>
     </div>
+
     {% if request.GET.next %}
         <input type="hidden" name="next" value="{{ request.GET.next }}">
     {% endif %}
