--- a/AskMe/templates/inc/one_question.html
+++ b/AskMe/templates/inc/one_question.html
@@ -2,10 +2,7 @@
 <div class="row media d-flex flex-wrap question-box">
 	<div class="d-flex px-1 mr-4 flex-column">
 		<img src="{% static question.profile_id.avatar %}" class="question-img mb-2" alt="...">
-		<div class="btn-group" role="group" aria-label="">
-			<button type="button" class="btn btn-outline-dark">&#9757;</button>
-			<span class="btn btn-outline-dark">{{ question.like }}</span>
-		</div>
+		{% include 'inc/like.html' with like=question.like %}
 	</div>
 	<div class="media-body px-1">
 		<a href="{% url 'question' question.id %}" class="h5 mt-0"><u>{{ question.title }}</u></a>
