--- a/AskMe/templates/hot_questions.html
+++ b/AskMe/templates/hot_questions.html
@@ -13,3 +13,7 @@
 
     {% include 'inc/pagination.html' %}
 {% endblock content %}
+
+{% block jscode %}
+    <script src="{% static '/js/votes.js' %}"></script>
+{% endblock jscode %}
