--- a/AskMe/templates/inc/base.html
+++ b/AskMe/templates/inc/base.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<title>AskMe Project</title>
 
-	<link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-	<link href="{% static "css/my.css" %}" rel="stylesheet">
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/my.css' %}" rel="stylesheet">
 </head>
 <body>
 	{% include 'inc/navbar.html' %}
@@ -30,8 +30,13 @@
 	</main>
 
 	{% include 'inc/footer.html' %}
-<!--	<script src="/js/jquery.min.js"></script>-->
-<!--	<script src="/js/popper.min.js"></script>-->
-<!--	<script src="/js/bootstrap.js"></script>-->
+
+	<script src="{% static '/js/jquery.min.js' %}"></script>
+	<script src="{% static '/js/csrf.js' %}"></script>
+<!--	<script src="{% static '/js/popper.min.js' %}"></script>-->
+<!--	<script src="{% static '/js/bootstrap.js' %}"></script>-->
+
+	{% block jscode %}
+	{% endblock jscode %}
 </body>
 </html>
