likes and dislikes

--- a/AskMe/templates/inc/like.html
+++ b/AskMe/templates/inc/like.html
@@ -1,7 +1,7 @@
 <form method="post">
     <div class="btn-group" role="group">
-        <button type="button" href="#" class="js-votes btn btn-outline-dark btn-sm" data-action="like" data-id="{{ pk }}">&nbsp;&#9757;&nbsp;</button>
-        <span class="btn btn-outline-dark btn-sm" id="rating-{{ pk }}">{{ like }}</span>
-        <button type="button" href="" class="js-votes btn btn-outline-dark btn-sm" data-action="dislike" data-id="{{ pk }}">&nbsp;&#129318;&nbsp;</button>
+        <button type="button" class="js-votes btn btn-outline-dark btn-sm" data-type="{{ type }}" data-id="{{ pk }}" data-action="like">&nbsp;&#9757;&nbsp;</button>
+        <span class="btn btn-outline-dark btn-sm" id="rating-{{ pk }}">{{ rating }}</span>
+        <button type="button"class="js-votes btn btn-outline-dark btn-sm" data-type="{{ type }}" data-id="{{ pk }}" data-action="dislike">&nbsp;&#129318;&nbsp;</button>
     </div>
 </form>
