--- a/AskMe/templates/inc/answer.html
+++ b/AskMe/templates/inc/answer.html
@@ -2,7 +2,7 @@
 <div class="row media d-flex flex-wrap question-box">
 	<div class="d-flex px-1 mr-4 flex-column">
 		<img src="{% static answer.profile_id.avatar %}" class="question-img mb-2" alt="...">
-		{% include 'inc/like.html' with like=answer.like pk=answer.pk %}
+		{% include 'inc/like.html' with type="answer" pk=answer.pk rating=answer.rating %}
     </div>
     <div class="media-body px-1">
         <p>{{ answer.text }}</p>
