--- a/AskMe/templates/question.html
+++ b/AskMe/templates/question.html
@@ -6,7 +6,7 @@
 <div class="row media d-flex flex-wrap">
 	<div class="d-flex px-1 mr-4 flex-column">
 		<img src="{% static question.profile_id.avatar %}" class="question-img mb-2" alt="...">
-		{% include 'inc/like.html' with like=question.like pk=question.pk %}
+		{% include 'inc/like.html' with type="question" pk=question.pk rating=question.rating %}
 	</div>
 	<div class="media-body">
 		<h5 class="mt-0"><u>{{ question.title }}</u></h5>
