--- a/AskMe/templates/question.html
+++ b/AskMe/templates/question.html
@@ -5,7 +5,7 @@
 
 <div class="row media d-flex flex-wrap">
 	<div class="d-flex px-1 mr-4 flex-column">
-		<img src="{% static question.profile_id.avatar %}" class="question-img mb-2" alt="...">
+		<img src="{{ question.profile_id.avatar.url }}" class="question-img mb-2" alt="...">
 		{% include 'inc/like.html' with type="question" pk=question.pk rating=question.rating %}
 	</div>
 	<div class="media-body">
@@ -47,4 +47,5 @@
 
 {% block jscode %}
     <script src="{% static '/js/votes.js' %}"></script>
+    <script src="{% static '/js/is_correct.js' %}"></script>
 {% endblock jscode %}
