--- a/AskMe/templates/signup.html
+++ b/AskMe/templates/signup.html
@@ -6,7 +6,7 @@
 {% endblock heading %}
 
 {% block content %}
-<form method="post" novalidate>
+<form method="post" novalidate enctype="multipart/form-data">
     {% csrf_token %}
 
     {% for form_field in form %}
@@ -23,15 +23,23 @@
         {% endif %}
     {% endfor %}
 
-    <div class="form-group row">
-        <label for="id_avatar" class="col-sm-3 col-form-label">Upload avatar</label>
-        <div class="col-sm-5">
-            <div class="custom-file">
-                <input type="file" class="custom-file-input" id="id_avatar" name="avatar">
-                <label class="custom-file-label" for="id_avatar" data-browse="choose">c:\avatar.jpg</label>
+<div class="form-group row mt-2">
+                <label class="col-sm-3 col-form-label">{{ form_field.label }}</label>
+                <div class="col-sm-9">
+                    {{ ava }}
+                </div>
             </div>
-        </div>
-    </div>
+
+
+<!--    <div class="form-group row">-->
+<!--        <label for="id_avatar" class="col-sm-3 col-form-label">Upload avatar</label>-->
+<!--        <div class="col-sm-5">-->
+<!--            <div class="custom-file">-->
+<!--                <input type="file" class="custom-file-input" id="id_avatar" name="avatar">-->
+<!--                <label class="custom-file-label" for="id_avatar" data-browse="choose">c:\avatar.jpg</label>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     {% if request.GET.next %}
         <input type="hidden" name="next" value="{{ request.GET.next }}">
