--- a/AskMe/templates/signup.html
+++ b/AskMe/templates/signup.html
@@ -10,7 +10,6 @@
     {% csrf_token %}
 
     {% for form_field in form %}
-        {% if form_field != form.avatar %}
             <div class="form-group row mt-2">
                 <label class="col-sm-3 col-form-label">{{ form_field.label }}</label>
                 <div class="col-sm-9">
@@ -20,23 +19,24 @@
                     </div>
                 </div>
             </div>
-        {% endif %}
     {% endfor %}
 
-<div class="form-group row mt-2">
-                <label class="col-sm-3 col-form-label">{{ form_field.label }}</label>
-                <div class="col-sm-9">
-                    {{ ava }}
-                </div>
+    <div class="form-group row mt-2">
+        <label class="col-sm-3 col-form-label">{{ form_field.label }}</label>
+        <div class="col-sm-9">
+            {{ ava }}
+            <div class="invalid-feedback d-block">
+                {{ ava.errors }}
             </div>
+        </div>
+    </div>
 
 
 <!--    <div class="form-group row">-->
 <!--        <label for="id_avatar" class="col-sm-3 col-form-label">Upload avatar</label>-->
 <!--        <div class="col-sm-5">-->
 <!--            <div class="custom-file">-->
-<!--                <input type="file" class="custom-file-input" id="id_avatar" name="avatar">-->
-<!--                <label class="custom-file-label" for="id_avatar" data-browse="choose">c:\avatar.jpg</label>-->
+<!--                {{ ava }}-->
 <!--            </div>-->
 <!--        </div>-->
 <!--    </div>-->
