--- a/AskMe/templates/inc/base.html
+++ b/AskMe/templates/inc/base.html
@@ -7,6 +7,7 @@
 
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="{% static 'css/my.css' %}" rel="stylesheet">
+	<link href="{% static 'img/favicon.ico' %}" rel="icon" type="image/x-icon">
 </head>
 <body>
 	{% include 'inc/navbar.html' %}
